📚 Auto-update: News data refreshed - 2025-12-31 19:09 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -34710,5 +34710,61 @@
         "published": "Wed, 31 Dec 2025 17:37:16 GMT",
         "source": "Latest news",
         "summary": "With no federal rules in place, state lawmakers are stepping in to regulate AI safety themselves."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/how-to-watch-samsungs-first-look-ces-2026-presentation-190027604.html?src=rss",
+        "title": "How to watch Samsung's \"First Look\" CES 2026 presentation",
+        "link": "https://www.engadget.com/mobile/how-to-watch-samsungs-first-look-ces-2026-presentation-190027604.html?src=rss",
+        "published": "Wed, 31 Dec 2025 19:00:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/54afdb10-dd18-11f0-b2f7-d2b3086683ec\" style=\"height: 2659px; width: 4372px;\" /><figcaption>NurPhoto via Getty Images</figcaption></figure>\n<p>Samsung is arguably the 800-pound gorilla of CES, with a full spectrum of products that range from phones and computers to refrigerators to AI assistants and rolling robots. But for <a href=\"http://google.com/url?q=https://www.engadget.com/big-tech/ces-2026-preview-what-to-expect-from-t"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-press-conference-130048622.html?src=rss",
+        "title": "How to watch the Sony Honda Afeela CES 2026 press conference",
+        "link": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-press-conference-130048622.html?src=rss",
+        "published": "Wed, 31 Dec 2025 18:42:16 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"Sony Honda Mobility\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/3f099890-d9ef-11f0-a3f3-bb8a02df8254\" style=\"height: 1800px; width: 3200px;\" /><figcaption></figcaption></figure>\n<p>Sony's CES 2026 press conference is just days away, but this year has a twist: Instead of an overview of Sony's electronics, video game and Hollywood studio plans for the new year, the presser will apparently have a more narrow focus: electric vehicles. That's because the traditional e"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/januarys-ps-plus-monthly-games-include-need-for-speed-unbound-and-disney-epic-mickey-rebrushed-182335673.html?src=rss",
+        "title": "January's PS Plus Monthly Games include Need for Speed Unbound and Disney Epic Mickey: Rebrushed",
+        "link": "https://www.engadget.com/gaming/playstation/januarys-ps-plus-monthly-games-include-need-for-speed-unbound-and-disney-epic-mickey-rebrushed-182335673.html?src=rss",
+        "published": "Wed, 31 Dec 2025 18:23:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sony <a href=\"https://blog.playstation.com/2025/12/31/playstation-plus-monthly-games-for-january-need-for-speed-unbound-disney-epic-mickey-rebrushed-core-keeper/\"><ins>has revealed the first batch</ins></a> of PlayStation Plus Monthly Games for 2026. There are three titles to play this month, all of which drop on January 6. As always, you\u2019ll retain access to these games as long as your subscription remains active.</p>\n<div id=\"8ab8c0a66b4c4fe599f289efe531046e\"></div>\n<p>First up, there's <em>"
+    },
+    {
+        "id": "https://austinhenley.com/blog/canceledbookdeal.html",
+        "title": "I canceled my book deal",
+        "link": "https://austinhenley.com/blog/canceledbookdeal.html",
+        "published": "Wed, 31 Dec 2025 18:26:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46446815\">Comments</a>"
+    },
+    {
+        "id": "https://obits.goldsteinsfuneral.com/stewart-cheifet",
+        "title": "Stewart Cheifet, creator of The Computer Chronicles, dead at 87",
+        "link": "https://obits.goldsteinsfuneral.com/stewart-cheifet",
+        "published": "Wed, 31 Dec 2025 17:41:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46446359\">Comments</a>"
+    },
+    {
+        "id": "https://www.reuters.com/investigations/meta-created-playbook-fend-off-pressure-crack-down-scammers-documents-show-2025-12-31/",
+        "title": "Meta created 'playbook' to fend off pressure to crack down on scammers",
+        "link": "https://www.reuters.com/investigations/meta-created-playbook-fend-off-pressure-crack-down-scammers-documents-show-2025-12-31/",
+        "published": "Wed, 31 Dec 2025 18:28:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46446838\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ola-electric-business-head-for-cell-ops-vishal-chaturvedi-resigns/articleshow/126277784.cms",
+        "title": "Ola Electric business head for cell ops Vishal Chaturvedi resigns",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ola-electric-business-head-for-cell-ops-vishal-chaturvedi-resigns/articleshow/126277784.cms",
+        "published": "Wed, 31 Dec 2025 23:46:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In his resignation letter addressed to Ola Electric founder Bhavish Aggarwal, he said the decision was taken due to personal commitments and thanked the leadership and colleagues for their support during his tenure. The company has not announced a replacement for the role in the filing."
     }
 ]
