--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -34766,5 +34766,21 @@
         "published": "Wed, 31 Dec 2025 23:46:50 +0530",
         "source": "Tech-Economic Times",
         "summary": "In his resignation letter addressed to Ola Electric founder Bhavish Aggarwal, he said the decision was taken due to personal commitments and thanked the leadership and colleagues for their support during his tenure. The company has not announced a replacement for the role in the filing."
+    },
+    {
+        "id": "https://toidiu.com/blog/2025-12-25-privacy-and-control/",
+        "title": "Privacy and control. My tech setup",
+        "link": "https://toidiu.com/blog/2025-12-25-privacy-and-control/",
+        "published": "Wed, 31 Dec 2025 18:39:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46446938\">Comments</a>"
+    },
+    {
+        "id": "https://miguelcarranza.es/cto-year-8",
+        "title": "My role as a founder-CTO: year 8",
+        "link": "https://miguelcarranza.es/cto-year-8",
+        "published": "Fri, 26 Dec 2025 19:43:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46395438\">Comments</a>"
     }
 ]
