📚 Auto-update: News data refreshed - 2025-12-31 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -34782,5 +34782,29 @@
         "published": "Fri, 26 Dec 2025 19:43:50 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46395438\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/instagram-chief-ai-is-so-ubiquitous-it-will-be-more-practical-to-fingerprint-real-media-than-fake-media-202620080.html?src=rss",
+        "title": "Instagram chief: AI is so ubiquitous 'it will be more practical to fingerprint real media than fake media'",
+        "link": "https://www.engadget.com/social-media/instagram-chief-ai-is-so-ubiquitous-it-will-be-more-practical-to-fingerprint-real-media-than-fake-media-202620080.html?src=rss",
+        "published": "Wed, 31 Dec 2025 20:26:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's no secret that AI-generated content <a class=\"link\" href=\"https://www.engadget.com/techs-biggest-winners-of-2025-180000177.html\" target=\"_blank\">took over</a> our social media feeds in 2025. Now, Instagram's top exec Adam Mosseri has made it clear that he expects AI content to overtake non-AI imagery and the significant implications that shift has for its creators and photographers.</p><p>Mosseri shared the thoughts in <a class=\"link\" href=\"https://www.threads.com/@mosseri/post/DS76UiklI"
+    },
+    {
+        "id": "https://www.science.org/doi/10.1126/science.adv7434",
+        "title": "All-optical synthesis chip for large-scale intelligent semantic vision",
+        "link": "https://www.science.org/doi/10.1126/science.adv7434",
+        "published": "Wed, 31 Dec 2025 20:14:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46447827\">Comments</a>"
+    },
+    {
+        "id": "https://hiddenpalace.org/News/One_Bad_Ass_Hedgehog_-_Shadow_the_Hedgehog#Demystifying_DVDs",
+        "title": "Demystifying DVDs",
+        "link": "https://hiddenpalace.org/News/One_Bad_Ass_Hedgehog_-_Shadow_the_Hedgehog#Demystifying_DVDs",
+        "published": "Mon, 29 Dec 2025 03:25:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417162\">Comments</a>"
     }
 ]
