📚 Auto-update: News data refreshed - 2025-12-31 23:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -34806,5 +34806,29 @@
         "published": "Mon, 29 Dec 2025 03:25:35 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46417162\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/852124/adam-mosseri-ai-images-video-instagram",
+        "title": "You can\u2019t trust your eyes to tell you what\u2019s real anymore, says the head of Instagram",
+        "link": "https://www.theverge.com/news/852124/adam-mosseri-ai-images-video-instagram",
+        "published": "2025-12-31T17:54:10-05:00",
+        "source": "The Verge",
+        "summary": "Instagram boss Adam Mosseri is closing out 2025 with a 20-images-deep dive into what a new era of \"infinite synthetic content\" means as it all becomes harder and harder to distinguish from reality, and the old, more personal Instagram feed that he says has been \"dead\" for years. Last year, The Verge's Sarah Jeong wrote [&#8230;]"
+    },
+    {
+        "id": "https://www.latimes.com/business/story/2025-12-31/warren-buffett-steps-down-as-berkshire-hathaway-ceo-after-six-decades",
+        "title": "Warren Buffett steps down as Berkshire Hathaway CEO after six decades",
+        "link": "https://www.latimes.com/business/story/2025-12-31/warren-buffett-steps-down-as-berkshire-hathaway-ceo-after-six-decades",
+        "published": "Wed, 31 Dec 2025 21:44:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46448705\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/zomato-swiggy-offer-increased-payout-to-gig-workers-amid-strike-call-by-unions-on-new-years-eve",
+        "title": "Zomato, Swiggy offer increased payout to gig workers amid strike call by unions on New Year's Eve",
+        "link": "https://yourstory.com/2025/12/zomato-swiggy-offer-increased-payout-to-gig-workers-amid-strike-call-by-unions-on-new-years-eve",
+        "published": "Wed, 31 Dec 2025 08:50:39 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Food delivery platforms Zomato and Swiggy are rolling out peak-hour bonuses and penalty waivers for delivery partners ahead of New Year\u2019s Eve, as gig workers\u2019 unions call for a nationwide strike that could disrupt food delivery and quick-commerce services."
     }
 ]
