--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -34934,5 +34934,29 @@
         "published": "Thu, 01 Jan 2026 01:11:34 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Advanced diagnostics and AI-driven intelligence are no longer confined to automotive giants. They are reaching small garages, Tier II and Tier III towns, and fleet operators who form the backbone of India\u2019s mobility ecosystem."
+    },
+    {
+        "id": "https://flow5.tech/docs/releasenotes.html",
+        "title": "Flow5 Released to Open Source",
+        "link": "https://flow5.tech/docs/releasenotes.html",
+        "published": "Thu, 01 Jan 2026 03:47:20 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46451124\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/meta-created-playbook-to-fend-off-pressure-to-crack-down-on-scammers-documents-show/articleshow/126282081.cms",
+        "title": "Meta created 'playbook' to fend off pressure to crack down on scammers, documents show",
+        "link": "https://economictimes.indiatimes.com/tech/technology/meta-created-playbook-to-fend-off-pressure-to-crack-down-on-scammers-documents-show/articleshow/126282081.cms",
+        "published": "Thu, 01 Jan 2026 09:16:35 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Meta faced pressure over scam ads on Facebook and Instagram, especially from Japan. Internal papers show it reduced how easily regulators could find such ads, rather than fully fixing the problem. The company resisted strict advertiser checks worldwide to protect revenue, despite knowing verification would curb fraud."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/outlook-2026-indias-oldest-youngest-biggest-unicorns-likely-to-go-public",
+        "title": "Outlook 2026: India\u2019s oldest, youngest, biggest unicorns likely to go public",
+        "link": "https://yourstory.com/2025/12/outlook-2026-indias-oldest-youngest-biggest-unicorns-likely-to-go-public",
+        "published": "Thu, 01 Jan 2026 01:09:18 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "For nearly three years now, India\u2019s startup ecosystem\u2014once celebrated as the world\u2019s third-largest startup and unicorn market\u2014has faced a series of uncomfortable reckonings.\u00a0\n\nFirst came questions around whether consumer internet companies had overestimated market size. Then followed a wave of gove"
     }
 ]
