--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -34958,5 +34958,21 @@
         "published": "Thu, 01 Jan 2026 01:09:18 GMT",
         "source": "YourStory RSS Feed",
         "summary": "For nearly three years now, India\u2019s startup ecosystem\u2014once celebrated as the world\u2019s third-largest startup and unicorn market\u2014has faced a series of uncomfortable reckonings.\u00a0\n\nFirst came questions around whether consumer internet companies had overestimated market size. Then followed a wave of gove"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/brookfield-to-start-cloud-business-amid-ai-frenzy-the-information-reports/articleshow/126282183.cms",
+        "title": "Brookfield to start cloud business amid AI frenzy: The Information",
+        "link": "https://economictimes.indiatimes.com/tech/technology/brookfield-to-start-cloud-business-amid-ai-frenzy-the-information-reports/articleshow/126282183.cms",
+        "published": "Thu, 01 Jan 2026 09:31:22 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Brookfield plans to launch its own cloud business, leasing chips in data centres directly to AI developers. It will be backed by a new $10 billion AI fund and Radiant, developing data centres in France, Qatar and Sweden. The strategy tightens Brookfield\u2019s AI supply chain control and adds pressure on cloud giants."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/startup-prana-air-citizens-air-with-data-and-devices",
+        "title": "Prana Air is helping citizens understand the air they are breathing with data and devices",
+        "link": "https://yourstory.com/2025/12/startup-prana-air-citizens-air-with-data-and-devices",
+        "published": "Thu, 01 Jan 2026 01:15:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "New Delhi-based Prana Air provides air-quality monitoring hardware and real-time data on the kind of air people are breathing in their neighbourhoods."
     }
 ]
