--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -34974,5 +34974,21 @@
         "published": "Thu, 01 Jan 2026 01:15:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "New Delhi-based Prana Air provides air-quality monitoring hardware and real-time data on the kind of air people are breathing in their neighbourhoods."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/mirae-asset-venture-india-appoints-former-steadview-capital-md-puneet-kumar-as-ceo/articleshow/126283039.cms",
+        "title": "Mirae Asset Venture India appoints former Steadview Capital MD Puneet Kumar as CEO",
+        "link": "https://economictimes.indiatimes.com/tech/startups/mirae-asset-venture-india-appoints-former-steadview-capital-md-puneet-kumar-as-ceo/articleshow/126283039.cms",
+        "published": "Thu, 01 Jan 2026 10:55:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": ""
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/mirae-asset-venture-india-appoints-former-steadview-capital-md-puneet-kumar-as-ceo/articleshow/126282873.cms",
+        "title": "Mirae Asset Venture India appoints former Steadview Capital MD Puneet Kumar as CEO",
+        "link": "https://economictimes.indiatimes.com/tech/startups/mirae-asset-venture-india-appoints-former-steadview-capital-md-puneet-kumar-as-ceo/articleshow/126282873.cms",
+        "published": "Thu, 01 Jan 2026 10:55:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": ""
     }
 ]
