--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -34990,5 +34990,29 @@
         "published": "Thu, 01 Jan 2026 10:55:23 +0530",
         "source": "Tech-Economic Times",
         "summary": ""
+    },
+    {
+        "id": "https://www.wired.com/story/newegg-promo-code/",
+        "title": "Newegg Promo Code: 10% Off in January 2026",
+        "link": "https://www.wired.com/story/newegg-promo-code/",
+        "published": "Thu, 01 Jan 2026 06:20:00 +0000",
+        "source": "WIRED",
+        "summary": "Enjoy up to 10% off your entire order with today\u2019s Newegg discount code and save with the latest deals for gaming PCs, laptops, and computer parts."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/south-korea-exports-top-700-bn-in-2025-amid-ai-chips-boom/articleshow/126283547.cms",
+        "title": "South Korea exports top $700 bn in 2025, amid AI, chips boom",
+        "link": "https://economictimes.indiatimes.com/tech/technology/south-korea-exports-top-700-bn-in-2025-amid-ai-chips-boom/articleshow/126283547.cms",
+        "published": "Thu, 01 Jan 2026 11:46:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "South Korea's exports hit a record high in 2025, exceeding $700 billion, driven by a surge in AI-fueled semiconductor demand. Semiconductor exports alone reached $173.4 billion, a significant increase attributed to high-priced memory chips. Auto shipments also saw record performance, contributing to the nation's robust economic growth despite challenging global trade conditions."
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-medianama-year-in-review-2025/",
+        "title": "Medianama\u2019s year in review for 2025",
+        "link": "https://www.medianama.com/2026/01/223-medianama-year-in-review-2025/",
+        "published": "Thu, 01 Jan 2026 06:25:27 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Indian technology policy space started off with a bang in 2025 with the government releasing the draft Digital Data&#8230;</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-medianama-year-in-review-2025/\">Medianama&#8217;s year in review for 2025</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
