--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35014,5 +35014,13 @@
         "published": "Thu, 01 Jan 2026 06:25:27 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Indian technology policy space started off with a bang in 2025 with the government releasing the draft Digital Data&#8230;</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-medianama-year-in-review-2025/\">Medianama&#8217;s year in review for 2025</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/upi-rebounds-from-november-dip-ends-december-with-new-high-of-21-6-billion-transactions-worth-rs-28-lakh-crore/articleshow/126284548.cms",
+        "title": "UPI rebounds from November dip, ends December with new high of 21.6 billion transactions worth Rs 28 lakh crore",
+        "link": "https://economictimes.indiatimes.com/tech/technology/upi-rebounds-from-november-dip-ends-december-with-new-high-of-21-6-billion-transactions-worth-rs-28-lakh-crore/articleshow/126284548.cms",
+        "published": "Thu, 01 Jan 2026 13:24:07 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "UPI hit record transaction volumes and value in December, rebounding after a softer November, driven by festive and year-end spending. Other digital payment modes such as IMPS and FASTag also saw growth, while AePS declined sequentially. Even as usage rises, NPCI is reviewing certain features to address consumer safety concerns."
     }
 ]
