📚 Auto-update: News data refreshed - 2026-01-01 10:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35046,5 +35046,45 @@
         "published": "Thu, 01 Jan 2026 13:48:35 +0530",
         "source": "Tech-Economic Times",
         "summary": "By 2025, OpenAI under Sam Altman had shifted AI from novelty to critical infrastructure, with ChatGPT driving growth and vast spending on compute. Altman pushed autonomous agents, massive data centres and long-term bets despite losses. He acknowledged bubbles, fierce competition and regulation risks, but argued AI\u2019s economic impact would be transformational."
+    },
+    {
+        "id": "https://www.wired.com/story/10-tech-cleanup-tasks-for-new-years-day/",
+        "title": "10 Tech Cleanup Tasks for New Year's Day",
+        "link": "https://www.wired.com/story/10-tech-cleanup-tasks-for-new-years-day/",
+        "published": "Thu, 01 Jan 2026 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Knock out these simple chores on this day of fresh starts to keep you and your devices humming smoothly."
+    },
+    {
+        "id": "https://www.wired.com/story/acuity-scheduling/",
+        "title": "Here\u2019s What It\u2019s Like to Use Acuity Scheduling for Your Business or Side Hustle (2026)",
+        "link": "https://www.wired.com/story/acuity-scheduling/",
+        "published": "Thu, 01 Jan 2026 09:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The online booking platform aims to streamline scheduling for everything from virtual appointments to workshops."
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/best-smart-scale-160033523.html?src=rss",
+        "title": "The best smart scales for 2026",
+        "link": "https://www.engadget.com/home/smart-home/best-smart-scale-160033523.html?src=rss",
+        "published": "Thu, 01 Jan 2026 10:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you are trying to stay on top of your health this year, a smart scale can make the process feel more manageable. These devices log details like body fat, muscle mass and water levels, then sync everything to your phone so you can see patterns instead of guessing. It is an easy way to track changes and stay motivated between workouts or check-ins with your doctor.<br /><br />Some smart scales keep things simple and focus on just your data, while others tie into big fitness platforms or supp"
+    },
+    {
+        "id": "https://www.zdnet.com/article/microsoft-surface-laptop-5g-review/",
+        "title": "The most premium work laptop I tested in 2025 lets you finally ditch Wi-Fi for good",
+        "link": "https://www.zdnet.com/article/microsoft-surface-laptop-5g-review/",
+        "published": "Thu, 01 Jan 2026 10:00:58 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft's Surface Laptop 5G combines a positively premium build with an always-on connection."
+    },
+    {
+        "id": "https://inc42.com/startups/2025-in-review-the-best-of-inc42s-30-startups-to-watch/",
+        "title": "2025 In Review: The Best Of Inc42\u2019s 30 Startups To Watch",
+        "link": "https://inc42.com/startups/2025-in-review-the-best-of-inc42s-30-startups-to-watch/",
+        "published": "Thu, 01 Jan 2026 09:29:32 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"2025 In Review: The Best Of Inc42\u2019s 30 Startups To Watch\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-4.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />With a record number of startup IPOs, consistent private capital flow and new avenues for tech innovation emerging in India,&#8230;"
     }
 ]
